fix: reversed the changes for horizontal shift

--- a/frappe/public/css/bootstrap.css
+++ b/frappe/public/css/bootstrap.css
@@ -5683,9 +5683,7 @@ button.close {
   border: 0;
 }
 .modal-open {
-  overflow: scroll !important;
-  position:fixed;
-  width: 100%;
+  overflow: hidden;
 }
 .modal {
   position: fixed;
